# modern-software-dev-assignments

./: .gitignore  pyproject.toml
week1/: chain_of_thought.py  k_shot_prompting.py  pyproject.toml  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: .env.example  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml
week2/src/app/: db.py  main.py
week2/src/app/routers/: action_items.py  notes.py
week2/src/app/services/: extract.py
week2/src/frontend/: index.html
week2/src/tests/: test_extract.py
week3/: pyproject.toml
week3/server/: app.py
